# HotspotTriage

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTRE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SCORES.md  SECURITY.md  SUPPORT.md  full_stats.csv  pyproject.toml
.claude/: settings.json
.cursor/: mcp.json
.cursor/rules/: hotspottriage-score-check-before-edit.mdc
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: python-package.yml  sbom.yml  security.yml  tests.yml
.serena/: project.yml
docs/: Compliance.md  INSTALL.md  RELEASE_POLICY.md  SECURITY_REQUIREMENTS.md  agent-hotspottriage-score-check.md  block-cache-model.md  compliance.md  git-ssh-signing.md
docs/audit-evidence/: .gitkeep  branch-protection-2026-05-09.json  branch-protection-2026-05-09.md  branch-protection-effective-main-2026-05-09.json
docs/screenshots/: README.md
scripts/: install_hotspottriage.sh  run_hotspottriage_mcp.sh
src/code_complexity_py/: __main__.py  block_churn.py  cache.py  churn.py  cli.py  complexity.py  discovery.py  filtering.py  output.py  stats.py
src/hotspottriage/: __main__.py  block_churn.py  block_similarity.py  blocks.py  cache.py  cache_generator.py  churn.py  cli.py  config.py  discovery.py  explain.py  filtering.py  git_rev_worktree.py  mcp_config_fingerprint.py  mcp_errors.py  mcp_server.py  normalize.py  output.py  path_utils.py  progress_report.py  revision_cache.py  score.py  score_metrics.py  smell.py  statistic_row.py  stats.py  timestamps.py  username_privacy.py
tests/: conftest.py  test_block_churn.py  test_blocks.py  test_cache.py  test_cache_filter_fields.py  test_cache_generator.py  test_churn.py  test_cli.py  test_complexity.py  test_config.py  test_dashboard_heatmap.py  test_dashboard_html.py  test_dashboard_log_handler.py  test_dashboard_server.py  test_dashboard_stats.py  test_discovery.py  test_explain.py  test_filtering.py  test_git_rev_worktree.py  test_mcp_analyze_config.py  test_mcp_analyze_metadata.py  test_mcp_analyze_request.py  test_mcp_block_delta_report.py  test_mcp_block_row_utils.py  test_mcp_compact_and_summary.py  test_mcp_config_fingerprint.py  test_mcp_errors.py  test_mcp_filter_paths.py  test_mcp_git.py  test_mcp_init_paths.py  test_mcp_local_target.py  test_mcp_repo_filter.py  test_mcp_server.py  test_mcp_target.py  test_normalize.py  test_output.py  test_parallel_cache.py  test_path_utils.py  test_revision_cache.py  test_score.py  (+4 more)
(+90 files in other folders)
