[project]
name = "code-complexity-py"
version = "0.1.0"
description = "Python port of code-complexity: rank files by complexity x churn, with proper Python AST metrics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alexei", email = "alexei@opplane.com" }]
dependencies = [
    "radon>=6.0",
    "pathspec>=0.12",
    "tabulate>=0.9",
]

[project.scripts]
code-complexity-py = "code_complexity_py.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_complexity_py"]
