[project]
name = "hotspottriage"
version = "0.1.0"
description = "HotspotTriage: rank Python code by complexity × churn (AST metrics via radon)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alexei", email = "alexei.128.946@gmail.com" }]
dependencies = [
    "radon>=6.0",
    "pathspec>=0.12",
    "tabulate>=0.9",
    "pyyaml>=6.0",
    "fastmcp>=0.1",
]

[project.scripts]
hotspottriage = "hotspottriage.cli:main"
hotspottriage-mcp = "hotspottriage.mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hotspottriage"]
