[project]
name = "hotspottriage"
version = "0.1.0"
description = "HotspotTriage: rank Python code by complexity × churn (AST metrics via radon)."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "Alexei", email = "alexei@opplane.com" }]
dependencies = [
    "radon>=6.0",
    "pathspec>=0.12",
    "tabulate>=0.9",
    "pyyaml>=6.0",
    "fastmcp>=0.1",
    "pylint>=3.0",
    "rich>=13.0",
    "deepcsim>=0.1.2,<0.2",
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[project.urls]
Homepage = "https://github.com/avnovikov/HotspotTriage"

[project.scripts]
hotspottriage = "hotspottriage.cli:main"
hotspottriage-mcp = "hotspottriage.mcp_server:main"
hotspottriage-cache = "hotspottriage.cache_generator:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hotspottriage"]
